fixed styles of scrollbar and added styling to create artwork button

--- a/src/styles/ArtworksScrollbar.css
+++ b/src/styles/ArtworksScrollbar.css
@@ -1,4 +1,4 @@
-.artworks-section-profile{
+.artworks-scrollbar-container{
     display:flex;
     flex-direction: column;
 }
@@ -15,18 +15,24 @@
     flex-direction: column;
     border: solid black 1px;
 }
-
-.profile-artwork-card-image-wrapper{
-   width:200px;
+.scrollbar-heading{
+    font-weight:600;
+    padding:15px 0;
 }
+.artworks-scrollbar-heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.create-artwork-button{
+    background-color: black;
+    border-radius:20px;
+    width:36px;
 
-.profile-artwork-card-image-wrapper>img{
-    width:100%;
-
- }
-
-.profile-artwork-card-info-wrapper{
-    margin:0 5px;
-    font-size: 12px;
-    font-weight: 600;
+}
+.create-artwork-button >p {
+    color:white;
+    font-size: 24px;
+    text-align: center;
 }
